// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActionItem actionItem variant 1`] = `
<a
  aria-label="d"
  className="action-item action-item--variant-action-item "
  data-tooltip="d"
  onAuxClick={[Function]}
  onClick={[Function]}
  onKeyPress={[Function]}
  tabIndex={0}
>
  <img
    className="icon-inline"
    src="u"
  />
   
  g: 
  t
   
</a>
`;

exports[`ActionItem non-actionItem variant 1`] = `
<a
  aria-label="d"
  className="action-item "
  data-tooltip="d"
  onAuxClick={[Function]}
  onClick={[Function]}
  onKeyPress={[Function]}
  tabIndex={0}
>
  <img
    className="icon-inline"
    src="u"
  />
   
  g: 
  t
   
</a>
`;

exports[`ActionItem non-pressed actionItem 1`] = `
<a
  aria-pressed={false}
  className="action-item action-item--variant-action-item "
  onAuxClick={[Function]}
  onClick={[Function]}
  onKeyPress={[Function]}
  role="button"
  tabIndex={0}
>
  b
   
</a>
`;

exports[`ActionItem noop command 1`] = `
<span
  className="action-item  "
  data-tooltip="d"
>
  <img
    className="icon-inline"
    src="u"
  />
   
  g: 
  t
</span>
`;

exports[`ActionItem pressed toggle actionItem 1`] = `
<a
  aria-pressed={true}
  className="action-item action-item--variant-action-item action-item--pressed "
  onAuxClick={[Function]}
  onClick={[Function]}
  onKeyPress={[Function]}
  role="button"
  tabIndex={0}
>
  b
   
</a>
`;

exports[`ActionItem render as link for "open" command 1`] = `
<a
  className="action-item "
  href="https://example.com/bar"
  onClick={[Function]}
  onKeyPress={[Function]}
  tabIndex={0}
>
  
  t
   
</a>
`;

exports[`ActionItem render as link with icon for "open" command with different origin 1`] = `
<a
  className="action-item "
  href="https://other.com/foo"
  onClick={[Function]}
  onKeyPress={[Function]}
  tabIndex={0}
>
  
  t
   
  <svg
    className="mdi-icon "
    fill="currentColor"
    height={24}
    viewBox="0 0 24 24"
    width={24}
  >
    <path
      d="M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3 3,3.9 3,5V19C3,20.1 3.9,21 5,21H19C20.1,21 21,20.1 21,19V12H19V19Z"
    />
  </svg>
</a>
`;

exports[`ActionItem run command 1`] = `
<a
  aria-label="d"
  className="action-item action-item--variant-action-item disabled"
  data-tooltip="d"
  onAuxClick={[Function]}
  onClick={[Function]}
  onKeyPress={[Function]}
  tabIndex={0}
>
  <img
    className="icon-inline"
    src="u"
  />
   
  g: 
  t
   
</a>
`;

exports[`ActionItem run command 2`] = `
<a
  aria-label="d"
  className="action-item action-item--variant-action-item "
  data-tooltip="d"
  onAuxClick={[Function]}
  onClick={[Function]}
  onKeyPress={[Function]}
  tabIndex={0}
>
  <img
    className="icon-inline"
    src="u"
  />
   
  g: 
  t
   
</a>
`;

exports[`ActionItem run command with error 1`] = `
<a
  aria-label="d"
  className="action-item action-item--variant-action-item "
  data-tooltip="d"
  onAuxClick={[Function]}
  onClick={[Function]}
  onKeyPress={[Function]}
  tabIndex={0}
>
  <img
    className="icon-inline"
    src="u"
  />
   
  g: 
  t
   
</a>
`;

exports[`ActionItem run command with error with showInlineError 1`] = `
<a
  aria-label="Error: x"
  className="action-item action-item--variant-action-item "
  data-tooltip="Error: x"
  onAuxClick={[Function]}
  onClick={[Function]}
  onKeyPress={[Function]}
  tabIndex={0}
>
  <img
    className="icon-inline"
    src="u"
  />
   
  g: 
  t
   
</a>
`;

exports[`ActionItem run command with showLoadingSpinnerDuringExecution 1`] = `
<a
  aria-label="d"
  className="action-item action-item--loading action-item--variant-action-item disabled"
  data-tooltip="d"
  onAuxClick={[Function]}
  onClick={[Function]}
  onKeyPress={[Function]}
  tabIndex={0}
>
  <img
    className="icon-inline"
    src="u"
  />
   
  g: 
  t
   
  <div
    className="action-item__loader"
  >
    <div
      className="loading-spinner "
    />
  </div>
</a>
`;

exports[`ActionItem run command with showLoadingSpinnerDuringExecution 2`] = `
<a
  aria-label="d"
  className="action-item action-item--variant-action-item "
  data-tooltip="d"
  onAuxClick={[Function]}
  onClick={[Function]}
  onKeyPress={[Function]}
  tabIndex={0}
>
  <img
    className="icon-inline"
    src="u"
  />
   
  g: 
  t
   
</a>
`;

exports[`ActionItem title element 1`] = `
<a
  aria-label="d"
  className="action-item action-item--variant-action-item "
  data-tooltip="d"
  onAuxClick={[Function]}
  onClick={[Function]}
  onKeyPress={[Function]}
  tabIndex={0}
>
  <span>
    t2
  </span>
   
</a>
`;
